--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <button type="submit" class="about">about</button>
 <button type="submit" class="contact"> contact</button>
 <h3 class="autocrew">I am a computer enthusiast and web developer.</h3>
-<h4><img src="unsplash.jpg" alt="My Coding Environment/Work Office" align="left" width="150" height="145"/>
+<h4><img src="./unsplash.jpg" alt="My Coding Environment/Work Office" align="left" width="150" height="145"/>
 I'm into web design and I'm currently using html to design website to my target clients based on their specification and with css i make it look attractive.</h4>
 <h4>For more information about me. You can contact me by clicking on the button below:</h4>
 <button type="submit" class="Callus">Call us</button>
